AI-JADEDEVS4/src/objects/NE_Orders_old__c.object
<CustomObject>
    <description>NE Orders</description>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <description>Bill To Address</description>
        <label>Bill To Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Email__c</fullName>
        <description>Bill To Email</description>
        <label>Bill To Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <description>Bill To Name</description>
        <label>Bill To Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Phone__c</fullName>
        <description>Bill To Phone</description>
        <label>Bill To Phone</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact</description>
        <label>Contact_old</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NE Orders_old</relationshipLabel>
        <relationshipName>NE_Orders_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created Date</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency</description>
        <label>Currency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Order Number</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>Order Status</description>
        <label>Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Confirmation_Code__c</fullName>
        <description>PO Confirmation Code</description>
        <label>PO Confirmation Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Voucher_Number__c</fullName>
        <description>PO / Voucher Number</description>
        <label>PO / Voucher Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Option__c</fullName>
        <description>Payment Option</description>
        <label>Payment Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>NE Orders_old</label>
    <nameField>
        <label>OrderID_old</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NE Orders_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>